Some more style fixes on mobile.

--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -294,6 +294,7 @@ pre code {
 
 .highlight pre {
   margin-bottom: 0;
+  overflow-x: auto;
 }
 
 figure.highlight {
